--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
 
   <link rel="stylesheet" href="css/main.css">
-  <title>Easy IO</title>
+  <title>Viren IO 4</title>
 </head>
 
 <body>
