--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="navbar"><h1>VirenIO ::))<h1></div>
+  <div class="navbar"><h1>VirenIO --<h1></div>
 
   <div class="row">
     <div class="panel">
